Flash Loans Tab- UI allignment and spacing  fixed

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@ code {
   text-align: left;
   font-size: 40px;
   margin-bottom: 0px;
+  position: relative;
+  
 }
 
 .TitleAndStatsContainer {
@@ -31,6 +33,7 @@ code {
 .TitleContainer {
   flex-grow: 1;
   min-width: 120px;
+  
 }
 
 .StatsContainer {
@@ -72,16 +75,18 @@ code {
 }
 
 .FlashLoanListItem {
+  position: relative;
   display: flex;
   flex-direction: row;
   margin-top: 20px;
-  /* Calum' card styling: */
+    /* Calum' card styling: */
   max-width: 100%;
   max-height: 100px;
   box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.2);
   /* ------ */
   /* border: 1px solid rgb(85, 82, 82); */
   border-radius: 4px;
+  
 }
 
 .FlashLoanListItem:hover {
@@ -93,11 +98,13 @@ code {
   /* width: 20.33%; */
   flex-direction: column;
   display: flex;
+  padding: 20px;
 }
 
 .Third {
   /* border: 1px solid black; */
   flex-grow: 1;
+  padding: 1%;
   /* width: 33.33%; */
 }
 
@@ -107,15 +114,23 @@ code {
   height: 10%;
   flex-direction: column;
   display: flex;
+  padding: 5px;
 }
 
 .FLBorrowedTokensContainer {
   display: flex;
   flex-direction: row;
   justify-content: center;
-
+  padding-bottom: 10%;
+  
+  /* display: inline-block;
+  position: absolute;
+  left:0px;
+  top:30%;
+  padding-top:  50%; 
+  padding-right: 100%;
   width: 10%;
-  height: 80%;
+  height: 80%; */
 }
 
 .InteractionsContainer {
